@@ -1,4 +1,4 @@
-package com.csse3200.game.areas;
+package com.csse3200.game.areas.forest;
 
 import java.util.ArrayList;
 import java.util.HashMap;
@@ -7,6 +7,7 @@ import java.util.Map;
 import java.util.Objects;
 import java.util.function.Supplier;
 
+import com.csse3200.game.areas.GameArea;
 import org.slf4j.Logger;
 import org.slf4j.LoggerFactory;
 
@@ -17,11 +18,9 @@ import com.badlogic.gdx.math.GridPoint2;
 import com.badlogic.gdx.math.Vector2;
 import com.csse3200.game.GdxGame;
 import com.csse3200.game.areas.MapHandler.MapType;
-import com.csse3200.game.areas.ForestGameAreaConfigs.ForestGameAreaConfig;
 import com.csse3200.game.areas.terrain.TerrainFactory;
 import com.csse3200.game.areas.terrain.TerrainFactory.TerrainType;
 import com.csse3200.game.areas.terrain.TerrainLoader;
-import com.csse3200.game.components.CameraComponent;
 import com.csse3200.game.components.ProximityComponent;
 import com.csse3200.game.components.gamearea.GameAreaDisplay;
 import com.csse3200.game.components.inventory.InventoryComponent;
@@ -46,20 +45,18 @@ import com.csse3200.game.utils.math.RandomUtils;
 /** Forest area for the demo game with trees, a player, and some enemies. */
 public class ForestGameArea extends GameArea {
   private static final Logger logger = LoggerFactory.getLogger(ForestGameArea.class);
-  private static final ForestGameAreaConfig config = new ForestGameAreaConfig();
-  // INFO: The Map is equally divied into three areaas. Each area is 160x48 tiles wide.
-  //
+
+  // INFO: The Map is equally divided into three areas. Each area is 160x48 tiles wide.
   private static final GridPoint2 AREA_SIZE = new GridPoint2(10, 3); // modify this to change the dimension of the number of chunk in the area
   public static final GridPoint2 MAP_SIZE = new GridPoint2(16 * AREA_SIZE.x, 16 * AREA_SIZE.y * 3);
   private static final GridPoint2 PLAYER_SPAWN = new GridPoint2(MAP_SIZE.x / 2, 10);
-  private static final GridPoint2 KANGAROO_BOSS_SPAWN = new GridPoint2(25, 10);
-  private static final float WALL_WIDTH = 0.1f;
+  private static final float WALL_LENGTH = 0.1f;
+  private static final String UNLOCK_AREA_EVENT = "unlockArea";
   private final TerrainFactory terrainFactory;
-  private final ArrayList<Entity> area1To2 = new ArrayList<Entity>();
-  private final ArrayList<Entity> area2To3 = new ArrayList<Entity>();
+  private final ArrayList<Entity> area1To2 = new ArrayList<>();
+  private final ArrayList<Entity> area2To3 = new ArrayList<>();
   
   private final List<Entity> enemies;
-  // private final List<Entity> staticItems;
   private final Map<Integer, Entity> dynamicItems = new HashMap<>();
   private int totalItems = 0;
   private Entity player;
@@ -73,9 +70,9 @@ public class ForestGameArea extends GameArea {
 
   /**
    * Initialise this ForestGameArea to use the provided TerrainFactory.
+   * Precondition: terrainFactory is not null
    * @param terrainFactory TerrainFactory used to create the terrain for the GameArea.
    * @param game GdxGame needed for creating the player
-   * @requires terrainFactory != null
    */
   public ForestGameArea(TerrainFactory terrainFactory, GdxGame game) {
     super();
@@ -110,8 +107,8 @@ public class ForestGameArea extends GameArea {
 
       // spawn area barriers
       spawnWorldBarrier();
-      spawnFirstBerrier();
-      spawnSecondBerrier();
+      spawnFirstBarrier();
+      spawnSecondBarrier();
 
       //Enemies
       spawnEnemies();
@@ -127,12 +124,13 @@ public class ForestGameArea extends GameArea {
       player.getEvents().addListener("spawnLandBoss", this::spawnKangarooBoss);
       player.getEvents().addListener("spawnWaterBoss", this::spawnWaterBoss);
       player.getEvents().addListener("spawnAirBoss", this::spawnAirBoss);
+      player.getEvents().addListener("unlockArea", this::unlockArea);
       kangarooBossSpawned = false;
       waterBossSpawned = false;
       airBossSpawned = false;
 
       player.getEvents().addListener("dropItems", this::spawnEntityNearPlayer);
-      player.getEvents().addListener("unlockArea", this::unlockArea);
+      player.getEvents().addListener(UNLOCK_AREA_EVENT, this::unlockArea);
 
       //Initialise inventory and quests with loaded data
       player.getComponent(InventoryComponent.class).loadInventoryFromSave();
@@ -140,16 +138,16 @@ public class ForestGameArea extends GameArea {
       player.getComponent(QuestManager.class).loadQuests();
   }
 
-//  /**
-//   * Unlock an area of the map
-//   */
-//  @Override
-//  public void unlockArea(String area) {
-//    terrain.getMap().getLayers().get(area).setVisible(false);
-//  }
+  /**
+   * Unlock an area of the map
+   */
+  @Override
+  public void unlockArea(String area) {
+    terrain.getMap().getLayers().get(area).setVisible(false);
+  }
 
   /**
-   * Spwan the world barrier
+   * Spawn the world barrier
    */
   private void spawnWorldBarrier() {
     float tileSize = terrain.getTileSize();
@@ -158,25 +156,25 @@ public class ForestGameArea extends GameArea {
 
      // Left
      spawnEntityAt(
-         ObstacleFactory.createWall(WALL_WIDTH, worldBounds.y),
+         ObstacleFactory.createWall(WALL_LENGTH, worldBounds.y),
          GridPoint2Utils.ZERO,
          false,
          false);
      // Right
      spawnEntityAt(
-         ObstacleFactory.createWall(WALL_WIDTH, worldBounds.y),
+         ObstacleFactory.createWall(WALL_LENGTH, worldBounds.y),
          new GridPoint2(tileBounds.x, 0),
          false,
          false);
      // Top
      spawnEntityAt(
-         ObstacleFactory.createWall(worldBounds.x, WALL_WIDTH),
+         ObstacleFactory.createWall(worldBounds.x, WALL_LENGTH),
          new GridPoint2(0, tileBounds.y),
          false,
          false);
      // Bottom
      spawnEntityAt(
-         ObstacleFactory.createWall(worldBounds.x, WALL_WIDTH),
+         ObstacleFactory.createWall(worldBounds.x, WALL_LENGTH),
          GridPoint2Utils.ZERO,
          false,
          false);
@@ -185,22 +183,22 @@ public class ForestGameArea extends GameArea {
   /**
    * Spawns the first barrier
    */
-  private void spawnFirstBerrier() {
+  private void spawnFirstBarrier() {
     float tileSize = terrain.getTileSize();
     GridPoint2 tileBounds = terrain.getMapBounds(0);
     Vector2 worldBounds = new Vector2(tileBounds.x * tileSize, tileBounds.y * tileSize);
 
-    Entity leftWall = ObstacleFactory.createVisibleWall(worldBounds.x / 2 - 2, WALL_WIDTH);
-    Entity rightWall = ObstacleFactory.createVisibleWall(worldBounds.x / 2 , WALL_WIDTH);
+    Entity leftWall = ObstacleFactory.createVisibleWall(worldBounds.x / 2 - 2, WALL_LENGTH);
+    Entity rightWall = ObstacleFactory.createVisibleWall(worldBounds.x / 2 , WALL_LENGTH);
     spawnEntityAt(
         leftWall,
-        new GridPoint2(0, (int)(MAP_SIZE.y / 3)),
+        new GridPoint2(0, MAP_SIZE.y / 3),
         false,
         false);
 
     spawnEntityAt(
         rightWall,
-        new GridPoint2((int)(worldBounds.x / 2), (int)(MAP_SIZE.y / 3)),
+        new GridPoint2((int)(worldBounds.x / 2), MAP_SIZE.y / 3),
         false,
         false);
     area1To2.add(leftWall);
@@ -210,22 +208,22 @@ public class ForestGameArea extends GameArea {
   /**
    * Spawns the second barrier
    */
-  private void spawnSecondBerrier() {
+  private void spawnSecondBarrier() {
     float tileSize = terrain.getTileSize();
     GridPoint2 tileBounds = terrain.getMapBounds(0);
     Vector2 worldBounds = new Vector2(tileBounds.x * tileSize, tileBounds.y * tileSize);
 
-    Entity leftWall = ObstacleFactory.createVisibleWall(worldBounds.x / 2 - 2, WALL_WIDTH);
-    Entity rightWall = ObstacleFactory.createVisibleWall(worldBounds.x / 2, WALL_WIDTH);
+    Entity leftWall = ObstacleFactory.createVisibleWall(worldBounds.x / 2 - 2, WALL_LENGTH);
+    Entity rightWall = ObstacleFactory.createVisibleWall(worldBounds.x / 2, WALL_LENGTH);
     spawnEntityAt(
         leftWall,
-        new GridPoint2(0, (int)(MAP_SIZE.y / 3 * 2)),
+        new GridPoint2(0, MAP_SIZE.y / 3 * 2),
         false,
         false);
 
     spawnEntityAt(
         rightWall,
-        new GridPoint2((int)(worldBounds.x / 2), (int)(MAP_SIZE.y / 3 * 2)),
+        new GridPoint2((int)(worldBounds.x / 2), MAP_SIZE.y / 3 * 2),
         false,
         false);
   }
@@ -234,21 +232,16 @@ public class ForestGameArea extends GameArea {
     if (TerrainLoader.movedChunk(playerPos)) {
       logger.debug("Player position is: ({}, {})", playerPos.x, playerPos.y);
       handleItems();
-//     TerrainComponent.loadChunks(playerPos);
-//     handleItems(TerrainComponent.newChunks, TerrainComponent.oldChunks);
-//     handleFriendlies(TerrainComponent.newChunks, TerrainComponent.oldChunks);
-//     handleEnemies(TerrainComponent.newChunks, TerrainComponent.oldChunks);
-//     handleMisc(TerrainComponent.newChunks, TerrainComponent.oldChunks);
     }
   }
 
   private void handleItems() {
-    // Spawn items on new chunks: TODO: ADD THIS TO A LIST OF DYNAMIC ENTITIES IN SPAWNER!
+    // Spawn items on new chunks
     for (GridPoint2 pos : terrain.getNewChunks()) {
       spawnItems(TerrainLoader.chunktoWorldPos(pos));
     }
 
-    // TODO: Despawn items on old chunks:
+    // TODO: De-spawn items on old chunks:
     List<Integer> removals = new ArrayList<>();
     for (int key : dynamicItems.keySet()) {
       GridPoint2 chunkPos = TerrainLoader.posToChunk(dynamicItems.get(key).getPosition());
@@ -291,9 +284,6 @@ public class ForestGameArea extends GameArea {
     this.terrain = terrainFactory.createTerrain(TerrainType.FOREST_DEMO, PLAYER_SPAWN, MAP_SIZE, MapType.FOREST);
     Entity terrain = new Entity().addComponent(this.terrain);
 
-    terrain.getEvents().addListener("unlockArea", this::unlockArea);
-
-    terrain.getEvents().trigger("unlockArea", "water");
     spawnEntity(terrain);
   }
 
@@ -301,7 +291,7 @@ public class ForestGameArea extends GameArea {
     GridPoint2 minPos = new GridPoint2(PLAYER_SPAWN.x - 10, PLAYER_SPAWN.y - 10);
     GridPoint2 maxPos = new GridPoint2(PLAYER_SPAWN.x + 10, PLAYER_SPAWN.y + 10);
 
-    for (int i = 0; i < config.spawns.NUM_TREES; i++) {
+    for (int i = 0; i < ForestSpawnConfig.NUM_TREES; i++) {
       GridPoint2 randomPos = RandomUtils.random(minPos, maxPos);
       Entity tree = ObstacleFactory.createTree();
       spawnEntityAt(tree, randomPos, true, false);
@@ -313,7 +303,7 @@ public class ForestGameArea extends GameArea {
     GridPoint2 minPos = new GridPoint2(PLAYER_SPAWN.x - 10, PLAYER_SPAWN.y - 10);
     GridPoint2 maxPos = new GridPoint2(PLAYER_SPAWN.x + 10, PLAYER_SPAWN.y + 10);
 
-    for (int i = 0; i < config.spawns.NUM_CLOUDS; i++) {
+    for (int i = 0; i < ForestSpawnConfig.NUM_CLOUDS; i++) {
       GridPoint2 randomPos = RandomUtils.random(minPos, maxPos);
       Entity cloud = ObstacleFactory.createCloud();
       spawnEntityAt(cloud, randomPos, true, false);
@@ -325,7 +315,7 @@ public class ForestGameArea extends GameArea {
     GridPoint2 minPos = new GridPoint2(PLAYER_SPAWN.x - 10, PLAYER_SPAWN.y - 10);
     GridPoint2 maxPos = new GridPoint2(PLAYER_SPAWN.x + 10, PLAYER_SPAWN.y + 10);
 
-    for (int i = 0; i < config.spawns.NUM_SEAWEED; i++) {
+    for (int i = 0; i < ForestSpawnConfig.NUM_SEAWEED; i++) {
       GridPoint2 randomPos = RandomUtils.random(minPos, maxPos);
       Entity seaweed = ObstacleFactory.createSeaweed();
       spawnEntityAt(seaweed, randomPos, true, false);
@@ -337,7 +327,7 @@ public class ForestGameArea extends GameArea {
     GridPoint2 minPos = new GridPoint2(PLAYER_SPAWN.x - 10, PLAYER_SPAWN.y - 10);
     GridPoint2 maxPos = new GridPoint2(PLAYER_SPAWN.x + 10, PLAYER_SPAWN.y + 10);
 
-    for (int i = 0; i < config.spawns.NUM_STARFISH; i++) {
+    for (int i = 0; i < ForestSpawnConfig.NUM_STARFISH; i++) {
       GridPoint2 randomPos = RandomUtils.random(minPos, maxPos);
       Entity starfish = ObstacleFactory.createStarfish();
       spawnEntityAt(starfish, randomPos, true, false);
@@ -401,7 +391,6 @@ public class ForestGameArea extends GameArea {
 /**
  * Spawns an entity near the player within a specified radius, ensuring the entity
  * is placed within the correct chunk boundaries and loaded areas of the game map.
- *
  * This function calculates a valid spawn position near the player's current location,
  * considering the player's world position and current chunk. It ensures that the entity
  * is spawned within the boundaries of the current chunk to avoid positioning the entity
@@ -445,39 +434,39 @@ private void spawnEntityNearPlayer(Entity entity, int radius) {
 
         // Health Potions
         generator = () -> ItemFactory.createHealthPotion(player);
-        spawnRandomItem(pos, generator, config.spawns.NUM_HEALTH_POTIONS);
+        spawnRandomItem(pos, generator, ForestSpawnConfig.NUM_HEALTH_POTIONS);
 
         // Defense Potions
         generator = () -> ItemFactory.createDefensePotion(player);
-        spawnRandomItem(pos, generator, config.spawns.NUM_DEFENSE_POTIONS);
+        spawnRandomItem(pos, generator, ForestSpawnConfig.NUM_DEFENSE_POTIONS);
 
         // Attack potions
         generator = () -> ItemFactory.createAttackPotion(player);
-        spawnRandomItem(pos, generator, config.spawns.NUM_ATTACK_POTIONS);
+        spawnRandomItem(pos, generator, ForestSpawnConfig.NUM_ATTACK_POTIONS);
 
         // Speed potions
         generator = () -> ItemFactory.createSpeedPotion(player);
-        spawnRandomItem(pos, generator, config.spawns.NUM_SPEED_POTIONS);
+        spawnRandomItem(pos, generator, ForestSpawnConfig.NUM_SPEED_POTIONS);
 
         // Apples
         generator = () -> ItemFactory.createApple(player);
-        spawnRandomItem(pos, generator, config.spawns.NUM_APPLES);
+        spawnRandomItem(pos, generator, ForestSpawnConfig.NUM_APPLES);
 
         // Carrots
         generator = () -> ItemFactory.createCarrot(player);
-        spawnRandomItem(pos, generator, config.spawns.NUM_CARROTS);
+        spawnRandomItem(pos, generator, ForestSpawnConfig.NUM_CARROTS);
 
         // Meat
         generator = () -> ItemFactory.createMeat(player);
-        spawnRandomItem(pos, generator, config.spawns.NUM_MEAT);
+        spawnRandomItem(pos, generator, ForestSpawnConfig.NUM_MEAT);
 
         // Chicken legs
         generator = () -> ItemFactory.createChickenLeg(player);
-        spawnRandomItem(pos, generator, config.spawns.NUM_CHICKEN_LEGS);
+        spawnRandomItem(pos, generator, ForestSpawnConfig.NUM_CHICKEN_LEGS);
 
         // Candy
         generator = () -> ItemFactory.createCandy(player);
-        spawnRandomItem(pos, generator, config.spawns.NUM_CANDY);
+        spawnRandomItem(pos, generator, ForestSpawnConfig.NUM_CANDY);
     }
 
     private void spawnEnemies() {
@@ -485,83 +474,88 @@ private void spawnEntityNearPlayer(Entity entity, int radius) {
 
         // Chicken
         generator = () -> EnemyFactory.createChicken(player);
-        spawnRandomEnemy(generator, config.spawns.NUM_CHICKENS, 0.05, 1);
+        spawnRandomEnemy(generator, ForestSpawnConfig.NUM_CHICKENS, 0.05, 1);
 
         // Monkey
         generator = () -> EnemyFactory.createMonkey(player);
-        spawnShooterEnemy(generator, config.spawns.NUM_MONKEYS, 0.04, 1);
+        spawnShooterEnemy(generator, ForestSpawnConfig.NUM_MONKEYS, 0.04, 1);
 
         // Pigeon
         generator = () -> EnemyFactory.createPigeon(player);
-        spawnRandomEnemy(generator, config.spawns.NUM_PIGEONS, 0.06, 3);
+        spawnRandomEnemy(generator, ForestSpawnConfig.NUM_PIGEONS, 0.06, 3);
 
         // Frog
         generator = () -> EnemyFactory.createFrog(player);
-        spawnRandomEnemy(generator, config.spawns.NUM_FROGS, 0.06, 2);
+        spawnRandomEnemy(generator, ForestSpawnConfig.NUM_FROGS, 0.06, 2);
 
         //Bear
         generator = () -> EnemyFactory.createBear(player);
-        spawnRandomEnemy(generator, config.spawns.NUM_BEARS, 0.1, 1);
+        spawnRandomEnemy(generator, ForestSpawnConfig.NUM_BEARS, 0.1, 1);
 
         //Bee
         generator = () -> EnemyFactory.createBee(player);
-        spawnRandomEnemy(generator,config.spawns.NUM_BEES,0.1, 3);
+        spawnRandomEnemy(generator, ForestSpawnConfig.NUM_BEES,0.1, 3);
 
         //Eel
         generator = () -> EnemyFactory.createEel(player);
-        spawnShooterEnemy(generator, config.spawns.NUM_EELS, 0.1, 2);
+        spawnShooterEnemy(generator, ForestSpawnConfig.NUM_EELS, 0.1, 2);
 
         //Octopus
         generator = () -> EnemyFactory.createOctopus(player);
-        spawnRandomEnemy(generator, config.spawns.NUM_OCTOPUS, 0.06, 2);
+        spawnRandomEnemy(generator, ForestSpawnConfig.NUM_OCTOPUS, 0.06, 2);
 
         //Big saw fish
         generator = () -> EnemyFactory.createBigsawfish(player);
-        spawnShooterEnemy(generator, config.spawns.NUM_BIGSAWFISH, 0.1, 2);
+        spawnShooterEnemy(generator, ForestSpawnConfig.NUM_BIGSAWFISH, 0.1, 2);
 
         //Macaw
         generator = () -> EnemyFactory.createMacaw(player);
-        spawnShooterEnemy(generator, config.spawns.NUM_MACAW, 0.1, 3);
+        spawnShooterEnemy(generator, ForestSpawnConfig.NUM_MACAW, 0.1, 3);
 
         //Hive
         generator = () -> ProjectileFactory.createHive(player);
         spawnHive(generator, 5, 0.1, 1);
     }
 
+    /**
+     *  Spawns the friendly NPCs onto the map
+     */
     private void spawnFriendlyNPCs() {
         Supplier<Entity> generator;
 
         // Cow
         generator = () -> NPCFactory.createCow(player, this.enemies);
-        spawnRandomNPC(generator, config.spawns.NUM_COWS);
+        spawnRandomNPC(generator, ForestSpawnConfig.NUM_COWS);
 
         // Fish
         generator = () -> NPCFactory.createFish(player, this.enemies);
-        spawnRandomNPC(generator, config.spawns.NUM_FISH);
+        spawnRandomNPC(generator, ForestSpawnConfig.NUM_FISH);
 
         // Lion
         generator = () -> NPCFactory.createLion(player, this.enemies);
-        spawnRandomNPC(generator, config.spawns.NUM_LIONS);
+        spawnRandomNPC(generator, ForestSpawnConfig.NUM_LIONS);
 
         // Turtle
         generator = () -> NPCFactory.createTurtle(player, this.enemies);
-        spawnRandomNPC(generator, config.spawns.NUM_TURTLES);
+        spawnRandomNPC(generator, ForestSpawnConfig.NUM_TURTLES);
 
         // Eagle
         generator = () -> NPCFactory.createEagle(player, this.enemies);
-        spawnRandomNPC(generator, config.spawns.NUM_EAGLES);
+        spawnRandomNPC(generator, ForestSpawnConfig.NUM_EAGLES);
 
         // Snake
         generator = () -> NPCFactory.createSnake(player, this.enemies);
-        spawnRandomNPC(generator, config.spawns.NUM_SNAKES);
+        spawnRandomNPC(generator, ForestSpawnConfig.NUM_SNAKES);
 
         // Magpie
         generator = () -> NPCFactory.createMagpie(player, this.enemies);
-        spawnRandomNPC(generator, config.spawns.NUM_MAGPIES);
+        spawnRandomNPC(generator, ForestSpawnConfig.NUM_MAGPIES);
     }
 	
     /**
      * Spawns defeated enemy NPCs are friendly NPCs in the same/similar location
+     *
+     * @param defeatedEnemy the entity that has been defeated in combat
      */
 	@Override
 	public void spawnConvertedNPCs(Entity defeatedEnemy) {
@@ -572,7 +566,7 @@ private void spawnEntityNearPlayer(Entity entity, int radius) {
 		}
 		
 		Vector2 pos = calculateSpawnPosition(defeatedEnemy);
-		Entity convertedNPC = null;
+		Entity convertedNPC; // defaults to null
 		
 		switch (defeatedEnemy.getEnemyType()) {
 			case CHICKEN:
@@ -589,19 +583,22 @@ private void spawnEntityNearPlayer(Entity entity, int radius) {
 				break;
 			// Add other enemy types as needed
 			default:
-				logger.warn("Unhandled enemy type for conversion: " + defeatedEnemy.getEnemyType());
-				return;
+                return;
 		}
-		
-		if (convertedNPC != null) {
-			spawnEntityAtVector(convertedNPC, pos);
-			convertedNPC.getEvents().trigger("wanderStart");
-			logger.info("Converted " + defeatedEnemy.getEnemyType() + " to friendly NPC at " + pos);
-		}
-	}
-	
-	// Might remove this method later (pretty much a copy of spawnBanana)
-	private Vector2 calculateSpawnPosition(Entity entity) {
+
+        spawnEntityAtVector(convertedNPC, pos);
+        convertedNPC.getEvents().trigger("wanderStart");
+    }
+
+    /**
+     * Calculates a spawn position for an entity relative to the player's position.
+     * The position is adjusted based on the entity's current position in comparison to the player's
+     * and is clamped to ensure it stays within the map boundaries.
+     *
+     * @param entity the entity for which the spawn position is being calculated.
+     * @return a representing the new spawn position within the map bounds.
+     */
+    private Vector2 calculateSpawnPosition(Entity entity) {
 		// Use the same logic as in spawnBanana method
 		float spawnX = (entity.getPosition().x - player.getPosition().x) > 0 ? -1 : 1;
 		float spawnY = (entity.getPosition().y - player.getPosition().y) > 0 ? 1 : -1;
@@ -610,8 +607,8 @@ private void spawnEntityNearPlayer(Entity entity, int radius) {
 		Vector2 pos = new Vector2(entity.getPosition().x + spawnX, entity.getPosition().y + spawnY);
 		
 		// Ensure the position is within map bounds
-		pos.x = Math.max(0, Math.min(pos.x, MAP_SIZE.x));
-		pos.y = Math.max(0, Math.min(pos.y, MAP_SIZE.y));
+        pos.x = Math.clamp(pos.x, 0, MAP_SIZE.x);
+        pos.y = Math.clamp(pos.y, 0, MAP_SIZE.y);
 		
 		return pos;
 	}
@@ -640,10 +637,6 @@ private void spawnEntityNearPlayer(Entity entity, int radius) {
         }
     }
     public void playMusic() {
-//    Music music = ServiceLocator.getResourceService().getAsset(BACKGROUND_MUSIC, Music.class);
-//    music.setLooping(true);
-//    music.setVolume(0.5f);
-//    music.play();
     // Get the selected music track from the user settings
     UserSettings.Settings settings = UserSettings.get();
     String selectedTrack = settings.selectedMusicTrack;  // This will be "Track 1" or "Track 2"
@@ -656,8 +649,6 @@ private void spawnEntityNearPlayer(Entity entity, int radius) {
     }
   }
   public void pauseMusic() {
-//    Music music = ServiceLocator.getResourceService().getAsset(BACKGROUND_MUSIC, Music.class);
-//    music.pause();
         AudioManager.stopMusic();  // Stop the music
     }
 
@@ -689,20 +680,15 @@ private void spawnEntityNearPlayer(Entity entity, int radius) {
     }
 
     private void spawnProjectile(Entity enemy, Entity.EnemyType name)  {
-        Entity projectile;
-        switch (name) {
-            case MONKEY:
-                projectile = ProjectileFactory.createBanana(player);
-                break;
-            case EEL:
-                projectile = ProjectileFactory.createElectricOrb(player);
-                break;
-            case MACAW:
-                projectile = ProjectileFactory.createWorm(player);
-                break;
-            default:
-                projectile = ProjectileFactory.createBanana(player);
-        }
+        Entity projectile = switch (name) {
+            case MONKEY -> ProjectileFactory.createBanana(player);
+            case EEL -> ProjectileFactory.createElectricOrb(player);
+            case MACAW -> ProjectileFactory.createWorm(player);
+            default -> {
+                logger.warn("Attempting to add a projectile to an Entity that may not support it");
+                yield ProjectileFactory.createBanana(player);
+            }
+        };
 
         // Calculate bananaX and bananaY based on target's relative position
         float bananaX = (enemy.getPosition().x - player.getPosition().x) > 0 ? -1 : 1;
@@ -721,7 +707,7 @@ private void spawnEntityNearPlayer(Entity entity, int radius) {
 
         for (int i = 0; i < numHives; i++) {
             GridPoint2 randomPos = RandomUtils.random(minPos, maxPos);
-            Entity enemy = ProjectileFactory.createHive(player);
+            Entity enemy = creator.get();
             spawnEntityAt(enemy, randomPos, true, false);
             enemies.add(enemy);
             enemy.addComponent(new ProximityComponent(player, proximityRange));
@@ -734,11 +720,11 @@ private void spawnEntityNearPlayer(Entity entity, int radius) {
         enemies.add(bee);
     }
 
-    private void spawnJoeyEnemy(Entity kanga) {
-        if (kanga != null) {
+    private void spawnJoeyEnemy(Entity kangaroo) {
+        if (kangaroo != null) {
             Entity joey = EnemyFactory.createJoey(player);
 
-            Vector2 kangarooBossPos = kanga.getPosition();
+            Vector2 kangarooBossPos = kangaroo.getPosition();
 
             // Define the area around the Kangaroo boss where the Joey can be spawned
             GridPoint2 minPos = new GridPoint2((int) kangarooBossPos.x - 2, (int) kangarooBossPos.y - 2);
@@ -781,7 +767,7 @@ private void spawnEntityNearPlayer(Entity entity, int radius) {
      * Static method to play the background music
      */
     public static void pMusic() {
-        Music music = ServiceLocator.getResourceService().getAsset(config.sounds.backgroundMusic,
+        Music music = ServiceLocator.getResourceService().getAsset(ForestSoundsConfig.BACKGROUND_MUSIC,
                 Music.class);
         music.setLooping(true);
         music.setVolume(0.5f);
@@ -792,7 +778,7 @@ private void spawnEntityNearPlayer(Entity entity, int radius) {
      * Static method to pause the background music
      */
     public static void puMusic() {
-        Music music = ServiceLocator.getResourceService().getAsset(config.sounds.backgroundMusic, Music.class);
+        Music music = ServiceLocator.getResourceService().getAsset(ForestSoundsConfig.BACKGROUND_MUSIC, Music.class);
         music.pause();
     }
 
@@ -800,13 +786,12 @@ private void spawnEntityNearPlayer(Entity entity, int radius) {
         logger.debug("LOADING ASSETS");
         ResourceService resourceService = ServiceLocator.getResourceService();
         resourceService.loadMusic(new String[] {"sounds/BGM_03_mp3.mp3", "sounds/track_2.mp3"});
-        //resourceService.loadMusic(forestMusic);
 
-        resourceService.loadTextures(config.textures.forestTextures);
-        resourceService.loadTextureAtlases(config.textures.forestTextureAtlases);
-        resourceService.loadSounds(config.sounds.gameSounds);
-        resourceService.loadMusic(config.sounds.gameMusic);
-        resourceService.loadSounds(config.sounds.characterSounds);
+        resourceService.loadTextures(ForestTexturesConfig.FOREST_TEXTURES);
+        resourceService.loadTextureAtlases(ForestTexturesConfig.FOREST_TEXTURE_ATLASES);
+        resourceService.loadSounds(ForestSoundsConfig.GAME_SOUNDS);
+        resourceService.loadMusic(ForestSoundsConfig.GAME_MUSIC);
+        resourceService.loadSounds(ForestSoundsConfig.CHARACTER_SOUNDS);
         while (!resourceService.loadForMillis(10)) {
             // This could be upgraded to a loading screen
             logger.debug("Loading... {}%", resourceService.getProgress());
@@ -817,16 +802,16 @@ private void spawnEntityNearPlayer(Entity entity, int radius) {
     public void unloadAssets() {
         logger.debug("UNLOADING ASSETS");
         ResourceService resourceService = ServiceLocator.getResourceService();
-        resourceService.unloadAssets(config.textures.forestTextures);
-        resourceService.unloadAssets(config.textures.forestTextureAtlases);
-        resourceService.unloadAssets(config.sounds.gameSounds);
-        resourceService.unloadAssets(config.sounds.gameMusic);
+        resourceService.unloadAssets(ForestTexturesConfig.FOREST_TEXTURES);
+        resourceService.unloadAssets(ForestTexturesConfig.FOREST_TEXTURE_ATLASES);
+        resourceService.unloadAssets(ForestSoundsConfig.GAME_SOUNDS);
+        resourceService.unloadAssets(ForestSoundsConfig.GAME_MUSIC);
     }
 
     @Override
     public void dispose() {
         super.dispose();
-        ServiceLocator.getResourceService().getAsset(config.sounds.backgroundMusic, Music.class).stop();
+        ServiceLocator.getResourceService().getAsset(ForestSoundsConfig.BACKGROUND_MUSIC, Music.class).stop();
         this.unloadAssets();
     }
     public List<Entity> getEnemies() {
